# streamlit-30days-learning

./: .gitattributes  .gitignore  README.md  list-of-tags.txt  pyproject.toml
.github/workflows/: azure-webapps-python.yml
animation-demo-clone/: README.md  animation_demo_clone.py  pyproject.toml
dataframe-demo-clone/: dataframe_demo_clone.py  pyproject.toml
day10-Selectbox/: pyproject.toml
day11/: pyproject.toml
day12/: day12.py
day12-Checkbox/: pyproject.toml
day14/: pyproject.toml
day14-StreamlitComponents/: day14.py
day15-Latex/: pyproject.toml
day16/: day16.py
day16-CustomizingTheme/: pyproject.toml
day16-CustomizingTheme/.streamlit/: config.toml
day17/: day17.py
day17-Secrets/: day17.py  pyproject.toml
day18-FileUploader/: pyproject.toml
day18/.streamlit/: config.toml
day19/: day19.py
day19-Layout/: pyproject.toml
day2/: pyproject.toml
day2-FirstSimpleApp/: day2.py
day2-FirstSimpleApp/.streamlit/: config.toml
day21-ProgressBar/: pyproject.toml
day22-Form/: day22.py  pyproject.toml
day23-QueryParams/: day23.py  pyproject.toml
day24-Cache/: day24.py  pyproject.toml
day25/: pyproject.toml
day26/: pyproject.toml
day26-CallExternalAPI/: day26.py  pyproject.toml
day27/: data.json
day27-DraggableDashboard/: pyproject.toml
day28/: pyproject.toml
day28-SHAP-ExplainableAI/: day28.py
day3/: pyproject.toml
day3-Button/: pyproject.toml
day30-ExtractThumbnailYouTubeVideos/: pyproject.toml
day5-Write/: pyproject.toml
day8-Slider/: day8.py  pyproject.toml
day9-NativeLineChart/: pyproject.toml
mapping-demo-clone/: mapping_demo_clone.py  pyproject.toml
plotting-demo-clone/: plotting_demo_clone.py  pyproject.toml
