[tool.poetry]
name = "streamlit_30days_learning"
version = "0.1.0"
description = "A project where I will follow streamlit 30-days challenge"
authors = ["Dickson Souza <36424026+disouzam@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
